--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,5 @@
 {
-  "nrf-connect.applications": [
-    "${workspaceFolder}/misonode",
-    "${workspaceFolder}/misogate"
-  ]
+  "C_Cpp.default.compileCommands": "${workspaceFolder}/misogate/build/misogate/compile_commands.json",
+  "C_Cpp.errorSquiggles": "enabled",
+  "nrf-connect.applications": ["${workspaceFolder}/misogate"]
 }
