--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
   "C_Cpp.default.compileCommands": "${workspaceFolder}/misogate/build/misogate/compile_commands.json",
   "C_Cpp.errorSquiggles": "enabled",
-  "nrf-connect.applications": ["${workspaceFolder}/misogate"]
+  "nrf-connect.applications": [
+    "${workspaceFolder}/misogate",
+    "${workspaceFolder}\\misonode"
+  ]
 }
