--- a/misogate/prj.conf
+++ b/misogate/prj.conf
@@ -13,17 +13,30 @@ CONFIG_NRF_WIFI_RPU_RECOVERY=y
 
 CONFIG_WIFI_CREDENTIALS=y
 CONFIG_WIFI_CREDENTIALS_STATIC=y
-CONFIG_WIFI_CREDENTIALS_STATIC_SSID="AirPennNet-Device"
-CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="penn1740wifi"
+#CONFIG_WIFI_CREDENTIALS_STATIC_SSID="AirPennNet-Device"
+#CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="penn1740wifi"
+
+# Wi-Fi 
+CONFIG_WIFI_CREDENTIALS_STATIC_SSID="Kendrick Karma"
+CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="00000000"
 
 # Networking
 CONFIG_NETWORKING=y
 CONFIG_NET_SOCKETS=y
+#CONFIG_NET_SOCKETS_POSIX_NAMES=y  
 CONFIG_NET_LOG=y
 CONFIG_NET_IPV4=y
 CONFIG_NET_UDP=y
 CONFIG_NET_TCP=y
 CONFIG_NET_DHCPV4=y
+
+CONFIG_MQTT_LIB=y                  
+CONFIG_MQTT_KEEPALIVE=60           
+CONFIG_MQTT_LIB_TLS=n               
+#CONFIG_MQTT_MAX_PAYLOAD_SIZE=256
+
+
+
 
 CONFIG_NET_PKT_RX_COUNT=16
 CONFIG_NET_PKT_TX_COUNT=16
@@ -33,7 +46,7 @@ CONFIG_NRF70_RX_NUM_BUFS=16
 # tuned for performance, but this will be revisited in the future.
 CONFIG_NET_BUF_RX_COUNT=16
 CONFIG_NET_BUF_TX_COUNT=32
-CONFIG_HEAP_MEM_POOL_SIZE=37000
+#CONFIG_HEAP_MEM_POOL_SIZE=37000
 CONFIG_HEAP_MEM_POOL_IGNORE_MIN=y
 CONFIG_NRF_WIFI_CTRL_HEAP_SIZE=20000
 CONFIG_NRF_WIFI_DATA_HEAP_SIZE=40000
@@ -53,7 +66,7 @@ CONFIG_NET_CONFIG_INIT_TIMEOUT=0
 CONFIG_NET_SOCKETS_POLL_MAX=10
 
 # Memories
-CONFIG_MAIN_STACK_SIZE=5200
+#CONFIG_MAIN_STACK_SIZE=5200
 CONFIG_NET_TX_STACK_SIZE=4096
 CONFIG_NET_RX_STACK_SIZE=4096
 CONFIG_STA_SAMPLE_START_WIFI_THREAD_STACK_SIZE=5200
@@ -82,3 +95,18 @@ CONFIG_NET_CONFIG_MY_IPV4_GW="192.168.1.1"
 # design in net_mgmt. So, use a higher timeout for a crowded
 # environment.
 CONFIG_NET_MGMT_EVENT_QUEUE_TIMEOUT=5000
+
+
+# ===== Enable MQTT library =====
+CONFIG_MQTT_LIB=y
+CONFIG_MQTT_KEEPALIVE=60
+CONFIG_HEAP_MEM_POOL_SIZE=98304   
+CONFIG_MAIN_STACK_SIZE=9000
+CONFIG_SYS_HEAP_RUNTIME_STATS=y
+CONFIG_LOG_MODE_IMMEDIATE=y
+CONFIG_LOG_BACKEND_RTT_MODE_BLOCK=y   # RTT 输出时阻塞模式（可选）
+
+#CONFIG_MQTT_BUF_SIZE=1024
+#CONFIG_MQTT_PAYLOAD_BUFFER_LEN=1024
+
+
