--- a/misogate/prj.conf
+++ b/misogate/prj.conf
@@ -89,4 +89,7 @@ CONFIG_LOG_BACKEND_RTT_MODE_BLOCK=y   # RTT 输出时阻塞模式（可选）
 #CONFIG_MQTT_BUF_SIZE=1024
 #CONFIG_MQTT_PAYLOAD_BUFFER_LEN=1024
 
-
+CONFIG_SPI=y
+CONFIG_GPIO=y
+CONFIG_ASSERT=y
+CONFIG_MAIN_STACK_SIZE=4096
