--- a/misogate/prj.conf
+++ b/misogate/prj.conf
@@ -1,95 +1,14 @@
-# --- Core Wi-Fi ---
-CONFIG_NEWLIB_LIBC=y
-CONFIG_POSIX_API=y
-CONFIG_WIFI=y
-CONFIG_WIFI_NRF70=y
-
-# --- Logging (moderate) ---
 CONFIG_LOG=y
 CONFIG_LOG_DEFAULT_LEVEL=3
-CONFIG_LOG_BUFFER_SIZE=2048
-
-# --- WPA supplicant & driver ---
-CONFIG_WIFI_NM_WPA_SUPPLICANT=y
-CONFIG_WIFI_READY_LIB=y
-CONFIG_NRF_WIFI_RPU_RECOVERY=y
-
-# --- Wi-Fi credentials (static) ---
-CONFIG_WIFI_CREDENTIALS_STATIC=y
-#CONFIG_WIFI_CREDENTIALS_STATIC_SSID="AirPennNet-Device"
-#CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="penn1740wifi"
-
-# Wi-Fi 
-CONFIG_WIFI_CREDENTIALS_STATIC_SSID="Kendrick Karma"
-CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="00000000"
-
-# --- Networking ---
-CONFIG_NET_L2_ETHERNET=y
-CONFIG_NETWORKING=y
-CONFIG_NET_SOCKETS=y
-#CONFIG_NET_SOCKETS_POSIX_NAMES=y  
-CONFIG_NET_LOG=y
-CONFIG_NET_IPV4=y
-CONFIG_NET_UDP=y
-CONFIG_NET_TCP=y
-CONFIG_NET_DHCPV4=y
-CONFIG_NET_CONFIG_SETTINGS=y
-CONFIG_NET_CONFIG_INIT_TIMEOUT=0
-
-CONFIG_MQTT_LIB=y                  
-CONFIG_MQTT_KEEPALIVE=60           
-CONFIG_MQTT_LIB_TLS=n               
-#CONFIG_MQTT_MAX_PAYLOAD_SIZE=256
-
-
-
-
-CONFIG_NET_PKT_RX_COUNT=16
-CONFIG_NET_PKT_TX_COUNT=16
-CONFIG_NET_BUF_RX_COUNT=16
-CONFIG_NET_BUF_TX_COUNT=32
-#CONFIG_HEAP_MEM_POOL_SIZE=37000
-CONFIG_HEAP_MEM_POOL_IGNORE_MIN=y
-CONFIG_NRF_WIFI_CTRL_HEAP_SIZE=20000
-CONFIG_NRF_WIFI_DATA_HEAP_SIZE=40000
-
-CONFIG_NET_IF_UNICAST_IPV4_ADDR_COUNT=1
-CONFIG_NET_MAX_CONTEXTS=5
-CONFIG_NET_CONTEXT_SYNC_RECV=y
-
-CONFIG_INIT_STACKS=y
-
-CONFIG_NET_L2_ETHERNET=y
-
-CONFIG_NET_CONFIG_SETTINGS=y
-CONFIG_NET_CONFIG_INIT_TIMEOUT=0
-
-CONFIG_NET_SOCKETS_POLL_MAX=10
-
-# Memories
-#CONFIG_MAIN_STACK_SIZE=5200
-CONFIG_NET_TX_STACK_SIZE=4096
-CONFIG_NET_RX_STACK_SIZE=4096
-CONFIG_STA_SAMPLE_START_WIFI_THREAD_STACK_SIZE=5200
-
-# --- Misc ---
-CONFIG_ENTROPY_GENERATOR=y
-CONFIG_NET_MGMT_EVENT_QUEUE_TIMEOUT=5000
-
-
-# ===== Enable MQTT library =====
-CONFIG_MQTT_LIB=y
-CONFIG_MQTT_KEEPALIVE=60
-CONFIG_HEAP_MEM_POOL_SIZE=98304   
-CONFIG_MAIN_STACK_SIZE=9000
-CONFIG_SYS_HEAP_RUNTIME_STATS=y
-CONFIG_LOG_MODE_IMMEDIATE=y
-CONFIG_LOG_BACKEND_RTT_MODE_BLOCK=y   # RTT 输出时阻塞模式（可选）
-
-#CONFIG_MQTT_BUF_SIZE=1024
-#CONFIG_MQTT_PAYLOAD_BUFFER_LEN=1024
+CONFIG_PRINTK=y
+CONFIG_LOG_PRINTK=y
+CONFIG_LOG_BACKEND_UART=y
+CONFIG_SERIAL=y
+CONFIG_CONSOLE=y
+CONFIG_UART_CONSOLE=y
 
 CONFIG_SPI=y
 CONFIG_GPIO=y
 CONFIG_ASSERT=y
-CONFIG_MAIN_STACK_SIZE=4096
+CONFIG_MAIN_STACK_SIZE=9000
+CONFIG_HEAP_MEM_POOL_SIZE=98304
