--- a/misogate/prj.conf
+++ b/misogate/prj.conf
@@ -17,8 +17,8 @@ CONFIG_WIFI_CREDENTIALS_STATIC=y
 #CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="penn1740wifi"
 
 # Wi-Fi 
-CONFIG_WIFI_CREDENTIALS_STATIC_SSID="Kendrick Karma"
-CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="00000000"
+CONFIG_WIFI_CREDENTIALS_STATIC_SSID="5180_DETKIN"
+CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="i_am_secure"
 
 # Networking
 CONFIG_NETWORKING=y
@@ -108,5 +108,12 @@ CONFIG_LOG_BACKEND_RTT_MODE_BLOCK=y   # RTT 输出时阻塞模式（可选）
 
 #CONFIG_MQTT_BUF_SIZE=1024
 #CONFIG_MQTT_PAYLOAD_BUFFER_LEN=1024
+
+# DNS Resolution
+CONFIG_DNS_RESOLVER=y
+CONFIG_DNS_RESOLVER_ADDITIONAL_BUF_CTR=0
+CONFIG_DNS_RESOLVER_ADDITIONAL_QUERIES=0
+CONFIG_DNS_RESOLVER_MAX_SERVERS=1
+CONFIG_DNS_NUM_CONCUR_QUERIES=1
 
 
