--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,52 @@
   "nrf-connect.applications": [
     "${workspaceFolder}/misogate",
     "${workspaceFolder}\\misonode"
-  ]
+  ],
+  "files.associations": {
+    "*.phps": "php",
+    "*.sage": "python",
+    "__config": "cpp",
+    "__hash_table": "cpp",
+    "__locale": "cpp",
+    "algorithm": "cpp",
+    "array": "cpp",
+    "chrono": "cpp",
+    "codecvt": "cpp",
+    "compare": "cpp",
+    "deque": "cpp",
+    "forward_list": "cpp",
+    "fstream": "cpp",
+    "future": "cpp",
+    "list": "cpp",
+    "locale": "cpp",
+    "map": "cpp",
+    "memory": "cpp",
+    "numeric": "cpp",
+    "print": "cpp",
+    "regex": "cpp",
+    "set": "cpp",
+    "string": "cpp",
+    "tuple": "cpp",
+    "utility": "cpp",
+    "vector": "cpp",
+    "*.inc": "cpp",
+    "*.ipp": "cpp",
+    "bit": "cpp",
+    "*.tcc": "cpp",
+    "bitset": "cpp",
+    "exception": "cpp",
+    "expected": "cpp",
+    "functional": "cpp",
+    "iterator": "cpp",
+    "format": "cpp",
+    "limits": "cpp",
+    "memory_resource": "cpp",
+    "ranges": "cpp",
+    "ratio": "cpp",
+    "shared_mutex": "cpp",
+    "streambuf": "cpp",
+    "type_traits": "cpp",
+    "valarray": "cpp",
+    "*.txx": "cpp"
+  }
 }
