--- a/misogate/prj.conf
+++ b/misogate/prj.conf
@@ -17,8 +17,8 @@ CONFIG_WIFI_CREDENTIALS_STATIC=y
 #CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="penn1740wifi"
 
 # Wi-Fi 
-CONFIG_WIFI_CREDENTIALS_STATIC_SSID="5180_DETKIN"
-CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="i_am_secure"
+CONFIG_WIFI_CREDENTIALS_STATIC_SSID="AirPennNet-Device"
+CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="penn1740wifi"
 
 # Networking
 CONFIG_NETWORKING=y
@@ -87,10 +87,6 @@ CONFIG_LOG=y
 CONFIG_LOG_BUFFER_SIZE=2048
 CONFIG_POSIX_CLOCK=y
 
-CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.168.1.99"
-CONFIG_NET_CONFIG_MY_IPV4_NETMASK="255.255.255.0"
-CONFIG_NET_CONFIG_MY_IPV4_GW="192.168.1.1"
-
 # printing of scan results puts pressure on queues in new locking
 # design in net_mgmt. So, use a higher timeout for a crowded
 # environment.
@@ -104,7 +100,7 @@ CONFIG_HEAP_MEM_POOL_SIZE=98304
 CONFIG_MAIN_STACK_SIZE=9000
 CONFIG_SYS_HEAP_RUNTIME_STATS=y
 CONFIG_LOG_MODE_IMMEDIATE=y
-CONFIG_LOG_BACKEND_RTT_MODE_BLOCK=y   # RTT 输出时阻塞模式（可选）
+CONFIG_LOG_BACKEND_RTT_MODE_BLOCK=y   
 
 #CONFIG_MQTT_BUF_SIZE=1024
 #CONFIG_MQTT_PAYLOAD_BUFFER_LEN=1024
