updates to misogate

--- a/misogate/CMakeLists.txt
+++ b/misogate/CMakeLists.txt
@@ -7,5 +7,7 @@ target_include_directories(app PUBLIC ${ZEPHYR_BASE}/subsys/net/ip)
 
 target_sources(app PRIVATE
 	src/main.c
+	src/wifi.c
+	src/mqtt.c
 )
 
