--- a/misogate/prj.conf
+++ b/misogate/prj.conf
@@ -13,8 +13,13 @@ CONFIG_NRF_WIFI_RPU_RECOVERY=y
 
 CONFIG_WIFI_CREDENTIALS=y
 CONFIG_WIFI_CREDENTIALS_STATIC=y
-#CONFIG_WIFI_CREDENTIALS_STATIC_SSID="AirPennNet-Device"
-#CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="penn1740wifi"
+
+# MQTT Configuration
+CONFIG_MQTT_BROKER_ADDR="54.36.178.49"
+CONFIG_MQTT_BROKER_PORT=1883
+CONFIG_MQTT_CLIENT_ID="misogate_device_019a0cb4"
+CONFIG_MQTT_PUB_TOPIC="test/pub"
+CONFIG_MQTT_SUB_TOPIC="test/sub"
 
 # Wi-Fi 
 CONFIG_WIFI_CREDENTIALS_STATIC_SSID="AirPennNet-Device"
@@ -34,16 +39,10 @@ CONFIG_MQTT_LIB=y
 CONFIG_MQTT_KEEPALIVE=60           
 CONFIG_MQTT_LIB_TLS=n               
 #CONFIG_MQTT_MAX_PAYLOAD_SIZE=256
-
-
-
-
 CONFIG_NET_PKT_RX_COUNT=16
 CONFIG_NET_PKT_TX_COUNT=16
 CONFIG_NRF70_RX_NUM_BUFS=16
 
-# Below section is the primary contributor to SRAM and is currently
-# tuned for performance, but this will be revisited in the future.
 CONFIG_NET_BUF_RX_COUNT=16
 CONFIG_NET_BUF_TX_COUNT=32
 #CONFIG_HEAP_MEM_POOL_SIZE=37000
@@ -111,5 +110,4 @@ CONFIG_DNS_RESOLVER_ADDITIONAL_BUF_CTR=0
 CONFIG_DNS_RESOLVER_ADDITIONAL_QUERIES=0
 CONFIG_DNS_RESOLVER_MAX_SERVERS=1
 CONFIG_DNS_NUM_CONCUR_QUERIES=1
-
 
