--- a/misogate/sysbuild.conf
+++ b/misogate/sysbuild.conf
@@ -5,3 +5,7 @@
 #
 
 SB_CONFIG_WIFI_NRF70=y
+
+# MCUboot signature configuration
+SB_CONFIG_BOOT_SIGNATURE_KEY_FILE="${APP_DIR}/keys/mcuboot_priv.pem"
+SB_CONFIG_BOOT_SIGNATURE_TYPE_ECDSA_P256=y
