--- a/misogate/prj.conf
+++ b/misogate/prj.conf
@@ -1,91 +1,57 @@
-#
-# Copyright (c) 2022 Nordic Semiconductor ASA
-#
-# SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
-#
+# Misogate
+CONFIG_MISOGATE_APP_VERSION="v0.0.1"
 
-# ===== Wi-Fi Configuration =====
-CONFIG_WIFI=y
-CONFIG_WIFI_NRF70=y
-CONFIG_WIFI_NM_WPA_SUPPLICANT=y
-CONFIG_WIFI_READY_LIB=y
-CONFIG_NRF_WIFI_RPU_RECOVERY=y
-CONFIG_WIFI_CREDENTIALS=y
+# General
+CONFIG_LOG=y
+CONFIG_LOG_BUFFER_SIZE=2048
+CONFIG_HW_ID_LIBRARY=y
+CONFIG_ASSERT=y
+CONFIG_JSON_LIBRARY=y
+CONFIG_REBOOT=y
+
+# Heap and stacks
+CONFIG_HEAP_MEM_POOL_SIZE=16384
+CONFIG_MAIN_STACK_SIZE=4096
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
+
+# WiFi
 CONFIG_WIFI_CREDENTIALS_STATIC=y
 CONFIG_WIFI_CREDENTIALS_STATIC_SSID="AirPennNet-Device"
 CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="penn1740wifi"
 
-
-# Use MCUboot
-CONFIG_BOOTLOADER_MCUBOOT=y
-
-# ===== MQTT Configuration =====
-CONFIG_MQTT_LIB=y
-CONFIG_MQTT_LIB_TLS=n
-CONFIG_MQTT_KEEPALIVE=60
-CONFIG_MQTT_BROKER_ADDR="54.36.178.49"
-CONFIG_MQTT_BROKER_PORT=1883
-CONFIG_MQTT_CLIENT_ID="misogate_device_019a0cb4"
-CONFIG_MQTT_PUB_TOPIC="test/pub"
-CONFIG_MQTT_SUB_TOPIC="test/sub"
-
-# ===== Networking =====
+# Network
 CONFIG_NETWORKING=y
-CONFIG_NET_SOCKETS=y
-CONFIG_NET_LOG=y
+CONFIG_NET_NATIVE=y
 CONFIG_NET_IPV4=y
-CONFIG_NET_UDP=y
-CONFIG_NET_TCP=y
 CONFIG_NET_DHCPV4=y
-CONFIG_NET_L2_ETHERNET=y
-CONFIG_NET_CONFIG_SETTINGS=y
-CONFIG_NET_CONFIG_INIT_TIMEOUT=0
-CONFIG_NET_SOCKETS_POLL_MAX=10
-CONFIG_NET_IF_UNICAST_IPV4_ADDR_COUNT=1
-CONFIG_NET_MAX_CONTEXTS=5
-CONFIG_NET_CONTEXT_SYNC_RECV=y
-CONFIG_NET_MGMT_EVENT_QUEUE_TIMEOUT=5000
-
-# ===== Network Buffers =====
-CONFIG_NET_PKT_RX_COUNT=16
-CONFIG_NET_PKT_TX_COUNT=16
-CONFIG_NET_BUF_RX_COUNT=16
-CONFIG_NET_BUF_TX_COUNT=32
-CONFIG_NET_TC_TX_COUNT=1
-CONFIG_NRF70_RX_NUM_BUFS=16
-
-# ===== Memory Configuration =====
-CONFIG_HEAP_MEM_POOL_SIZE=98304
-CONFIG_HEAP_MEM_POOL_IGNORE_MIN=y
-CONFIG_NRF_WIFI_CTRL_HEAP_SIZE=20000
-CONFIG_NRF_WIFI_DATA_HEAP_SIZE=40000
-CONFIG_MAIN_STACK_SIZE=9000
-CONFIG_NET_TX_STACK_SIZE=4096
-CONFIG_NET_RX_STACK_SIZE=4096
-CONFIG_STA_SAMPLE_START_WIFI_THREAD_STACK_SIZE=5200
-CONFIG_SYS_HEAP_RUNTIME_STATS=y
-
-# ===== DNS Resolution =====
 CONFIG_DNS_RESOLVER=y
-CONFIG_DNS_RESOLVER_ADDITIONAL_BUF_CTR=0
-CONFIG_DNS_RESOLVER_ADDITIONAL_QUERIES=0
-CONFIG_DNS_RESOLVER_MAX_SERVERS=1
-CONFIG_DNS_NUM_CONCUR_QUERIES=1
+CONFIG_NET_SOCKETS=y
+CONFIG_NET_SOCKETS_SOCKOPT_TLS=y
+CONFIG_TLS_CREDENTIALS=y
+CONFIG_NET_CONNECTION_MANAGER=y
+CONFIG_ZVFS_OPEN_MAX=24 
 
-# ===== Kernel Options =====
-CONFIG_INIT_STACKS=y
-CONFIG_ENTROPY_GENERATOR=y
+CONFIG_POSIX_MAX_FDS=15
+CONFIG_NET_SOCKETS_TLS_MAX_CONTEXTS=5
 
-# ===== Logging =====
-CONFIG_LOG=y
-CONFIG_LOG_BUFFER_SIZE=2048
-CONFIG_LOG_MODE_IMMEDIATE=y
-CONFIG_LOG_BACKEND_RTT_MODE_BLOCK=y
-CONFIG_POSIX_CLOCK=y
+# AWS IoT library
+CONFIG_AWS_IOT=y
+CONFIG_AWS_IOT_BROKER_HOST_NAME="a1nqctvl2kwinw-ats.iot.us-east-2.amazonaws.com"
+CONFIG_AWS_IOT_CLIENT_ID_STATIC="misogate"
 
-# ===== Debugging =====
-CONFIG_STACK_SENTINEL=y
-CONFIG_DEBUG_COREDUMP=y
-CONFIG_DEBUG_COREDUMP_BACKEND_LOGGING=y
-CONFIG_DEBUG_COREDUMP_MEMORY_DUMP_MIN=y
-CONFIG_SHELL_CMDS_RESIZE=n
+CONFIG_AWS_IOT_TOPIC_UPDATE_DELTA_SUBSCRIBE=y
+CONFIG_AWS_IOT_TOPIC_GET_ACCEPTED_SUBSCRIBE=y
+CONFIG_AWS_IOT_TOPIC_GET_REJECTED_SUBSCRIBE=y
+
+CONFIG_AWS_FOTA=y
+CONFIG_AWS_FOTA_DOWNLOAD_SECURITY_TAG=201
+
+# MQTT helper library
+CONFIG_MQTT_HELPER=y
+CONFIG_MQTT_HELPER_SEC_TAG=201
+CONFIG_MQTT_HELPER_LAST_WILL=y
+CONFIG_MQTT_HELPER_STACK_SIZE=4096
+
+# MQTT
+CONFIG_MQTT_KEEPALIVE=1200
+CONFIG_MQTT_CLEAN_SESSION=y
