--- a/misogate/prj.conf
+++ b/misogate/prj.conf
@@ -37,7 +37,7 @@ CONFIG_NET_DHCPV4=y
 
 CONFIG_MQTT_LIB=y                  
 CONFIG_MQTT_KEEPALIVE=60           
-CONFIG_MQTT_LIB_TLS=n               
+CONFIG_MQTT_LIB_TLS=y
 #CONFIG_MQTT_MAX_PAYLOAD_SIZE=256
 CONFIG_NET_PKT_RX_COUNT=16
 CONFIG_NET_PKT_TX_COUNT=16
@@ -66,11 +66,14 @@ CONFIG_NET_SOCKETS_POLL_MAX=10
 
 # Memories
 #CONFIG_MAIN_STACK_SIZE=5200
-CONFIG_NET_TX_STACK_SIZE=4096
-CONFIG_NET_RX_STACK_SIZE=4096
+CONFIG_NET_TX_STACK_SIZE=2048
+CONFIG_NET_RX_STACK_SIZE=2048
 CONFIG_STA_SAMPLE_START_WIFI_THREAD_STACK_SIZE=5200
+CONFIG_NRF70_MAX_TX_AGGREGATION=4
 
 # Debugging
+CONFIG_SHELL=y
+CONFIG_SHELL_STACK_SIZE=6144
 CONFIG_STACK_SENTINEL=y
 CONFIG_DEBUG_COREDUMP=y
 CONFIG_DEBUG_COREDUMP_BACKEND_LOGGING=y
@@ -95,8 +98,8 @@ CONFIG_NET_MGMT_EVENT_QUEUE_TIMEOUT=5000
 # ===== Enable MQTT library =====
 CONFIG_MQTT_LIB=y
 CONFIG_MQTT_KEEPALIVE=60
-CONFIG_HEAP_MEM_POOL_SIZE=98304   
-CONFIG_MAIN_STACK_SIZE=9000
+CONFIG_HEAP_MEM_POOL_SIZE=120000   
+CONFIG_MAIN_STACK_SIZE=6144
 CONFIG_SYS_HEAP_RUNTIME_STATS=y
 CONFIG_LOG_MODE_IMMEDIATE=y
 CONFIG_LOG_BACKEND_RTT_MODE_BLOCK=y   
@@ -111,3 +114,22 @@ CONFIG_DNS_RESOLVER_ADDITIONAL_QUERIES=0
 CONFIG_DNS_RESOLVER_MAX_SERVERS=1
 CONFIG_DNS_NUM_CONCUR_QUERIES=1
 
+
+# AWS OTA
+CONFIG_HW_ID_LIBRARY=y
+CONFIG_ASSERT=y
+CONFIG_JSON_LIBRARY=y
+CONFIG_REBOOT=y
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
+
+CONFIG_NET_NATIVE=y
+CONFIG_NET_CONNECTION_MANAGER=y
+CONFIG_ZVFS_OPEN_MAX=24 
+
+CONFIG_AWS_IOT=y
+CONFIG_AWS_IOT_BROKER_HOST_NAME="apfeackyu30fg-ats.iot.us-east-2.amazonaws.com"
+CONFIG_AWS_IOT_CLIENT_ID_STATIC="misogate_thing"
+
+CONFIG_AWS_IOT_TOPIC_UPDATE_DELTA_SUBSCRIBE=y
+CONFIG_AWS_IOT_TOPIC_GET_ACCEPTED_SUBSCRIBE=y
+CONFIG_AWS_IOT_TOPIC_GET_REJECTED_SUBSCRIBE=y
