--- a/misoweb/package.json
+++ b/misoweb/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-sts": "^3.934.0",
+    "@aws-sdk/credential-providers": "^3.934.0",
+    "aws-iot-device-sdk-v2": "^1.23.1",
+    "mqtt": "^5.14.1",
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "typescript": "^5",
