--- a/misogate/prj.conf
+++ b/misogate/prj.conf
@@ -43,9 +43,6 @@ CONFIG_AWS_IOT_TOPIC_UPDATE_DELTA_SUBSCRIBE=y
 CONFIG_AWS_IOT_TOPIC_GET_ACCEPTED_SUBSCRIBE=y
 CONFIG_AWS_IOT_TOPIC_GET_REJECTED_SUBSCRIBE=y
 
-CONFIG_AWS_FOTA=y
-CONFIG_AWS_FOTA_DOWNLOAD_SECURITY_TAG=201
-
 # MQTT helper library
 CONFIG_MQTT_HELPER=y
 CONFIG_MQTT_HELPER_SEC_TAG=201
@@ -55,3 +52,27 @@ CONFIG_MQTT_HELPER_STACK_SIZE=4096
 # MQTT
 CONFIG_MQTT_KEEPALIVE=1200
 CONFIG_MQTT_CLEAN_SESSION=y
+
+# Memfault Configuration
+CONFIG_MEMFAULT=y
+CONFIG_MEMFAULT_NCS_PROJECT_KEY="yiOkY8kF0mxCyfeDjLASlf0SBeYxDpM0"
+CONFIG_MEMFAULT_LOGGING_ENABLE=y
+CONFIG_MEMFAULT_LOG_LEVEL_INF=y
+CONFIG_MEMFAULT_HTTP_ENABLE=y
+CONFIG_MEMFAULT_HTTP_PERIODIC_UPLOAD=y
+CONFIG_MEMFAULT_HTTP_PERIODIC_UPLOAD_INTERVAL_SECS=60
+CONFIG_MEMFAULT_USER_CONFIG_ENABLE=y
+CONFIG_MEMFAULT_SHELL=y
+
+# Memfault Versioning
+CONFIG_MEMFAULT_NCS_FW_VERSION_STATIC=y
+CONFIG_MEMFAULT_NCS_FW_VERSION="0.0.1"
+
+# Memfault FOTA
+CONFIG_MEMFAULT_FOTA=y
+CONFIG_FOTA_DOWNLOAD=y
+CONFIG_DOWNLOAD_CLIENT=y
+CONFIG_DFU_TARGET=y
+CONFIG_IMG_MANAGER=y
+CONFIG_FLASH_MAP=y
+CONFIG_STREAM_FLASH=y
