--- a/misogate/prj.conf
+++ b/misogate/prj.conf
@@ -3,16 +3,16 @@ CONFIG_MISOGATE_APP_VERSION="v0.0.1"
 
 # General
 CONFIG_LOG=y
-CONFIG_LOG_BUFFER_SIZE=2048
+CONFIG_LOG_BUFFER_SIZE=1024
 CONFIG_HW_ID_LIBRARY=y
 CONFIG_ASSERT=y
 CONFIG_JSON_LIBRARY=y
 CONFIG_REBOOT=y
 
 # Heap and stacks
-CONFIG_HEAP_MEM_POOL_SIZE=32768
-CONFIG_MAIN_STACK_SIZE=8192
-CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
+CONFIG_HEAP_MEM_POOL_SIZE=8192
+CONFIG_MAIN_STACK_SIZE=4096
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
 
 # WiFi
 CONFIG_WIFI_CREDENTIALS_STATIC=y
@@ -63,10 +63,22 @@ CONFIG_MEMFAULT_HTTP_PERIODIC_UPLOAD=y
 CONFIG_MEMFAULT_HTTP_PERIODIC_UPLOAD_INTERVAL_SECS=60
 CONFIG_MEMFAULT_USER_CONFIG_ENABLE=y
 CONFIG_MEMFAULT_SHELL=y
+# Memfault Coredump Configuration
+# If using internal flash, these might be needed. If not, consider enabling RAM backed coredump again 
+# but reducing the size or region captured if memory is tight.
+# For this fix, we will try enabling RAM backed coredump again but with a very small size limit 
+# or try to fix the flash backing store if that is what is desired.
+# However, undefined references suggest the flash storage implementation is missing or not linked.
+# Let's revert to RAM backed coredump but keep the memory optimizations. 
+CONFIG_MEMFAULT_RAM_BACKED_COREDUMP=y
+CONFIG_MEMFAULT_RAM_BACKED_COREDUMP_SIZE=1024
 
 # Memfault Versioning
 CONFIG_MEMFAULT_NCS_FW_VERSION_STATIC=y
 CONFIG_MEMFAULT_NCS_FW_VERSION="0.0.1"
+CONFIG_MEMFAULT_NCS_FW_TYPE="main"
+CONFIG_MEMFAULT_NCS_DEVICE_ID_STATIC=y
+CONFIG_MEMFAULT_NCS_DEVICE_ID="misogate-test-device"
 
 # Memfault FOTA
 CONFIG_MEMFAULT_FOTA=y
