--- a/misogate/prj.conf
+++ b/misogate/prj.conf
@@ -1,90 +1,129 @@
-# Misogate
-CONFIG_MISOGATE_APP_VERSION="v0.0.1"
+# ========================================
+# Application Specific
+# ========================================
+CONFIG_MISOGATE_APP_VERSION="0.0.1"
 
-# General
+# ========================================
+# General System & Libraries
+# ========================================
 CONFIG_LOG=y
-CONFIG_LOG_BUFFER_SIZE=1024
-CONFIG_HW_ID_LIBRARY=y
 CONFIG_ASSERT=y
-CONFIG_JSON_LIBRARY=y
 CONFIG_REBOOT=y
+CONFIG_FPU=y
+CONFIG_NEWLIB_LIBC=y
+CONFIG_HW_ID_LIBRARY=y
+CONFIG_JSON_LIBRARY=y
+CONFIG_DK_LIBRARY=y
 
-# Heap and stacks
+# ========================================
+# Heap and Stacks
+# ========================================
 CONFIG_HEAP_MEM_POOL_SIZE=8192
 CONFIG_MAIN_STACK_SIZE=4096
-CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=3072
+CONFIG_NET_CONNECTION_MANAGER_MONITOR_STACK_SIZE=1024
+CONFIG_NET_MGMT_EVENT_STACK_SIZE=1024
 
+# ========================================
+# Flash & Storage
+# ========================================
+CONFIG_FLASH=y
+CONFIG_FLASH_MAP=y
+CONFIG_STREAM_FLASH=y
+CONFIG_STREAM_FLASH_ERASE=y
+
+# ========================================
 # WiFi
+# ========================================
 CONFIG_WIFI_CREDENTIALS_STATIC=y
 CONFIG_WIFI_CREDENTIALS_STATIC_SSID="AirPennNet-Device"
 CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="penn1740wifi"
 
-# Network
+# ========================================
+# Networking & Sockets
+# ========================================
 CONFIG_NETWORKING=y
 CONFIG_NET_NATIVE=y
 CONFIG_NET_IPV4=y
 CONFIG_NET_DHCPV4=y
 CONFIG_DNS_RESOLVER=y
+CONFIG_NET_CONNECTION_MANAGER=y
+
+# Sockets & TLS
 CONFIG_NET_SOCKETS=y
 CONFIG_NET_SOCKETS_SOCKOPT_TLS=y
 CONFIG_TLS_CREDENTIALS=y
-CONFIG_NET_CONNECTION_MANAGER=y
-CONFIG_ZVFS_OPEN_MAX=24 
+CONFIG_MBEDTLS=y
 
+# Network Resources & Limits
+CONFIG_ZVFS_OPEN_MAX=24
 CONFIG_POSIX_MAX_FDS=15
 CONFIG_NET_SOCKETS_TLS_MAX_CONTEXTS=5
 
-# AWS IoT library
+# ========================================
+# AWS IoT
+# ========================================
 CONFIG_AWS_IOT=y
 CONFIG_AWS_IOT_BROKER_HOST_NAME="a1nqctvl2kwinw-ats.iot.us-east-2.amazonaws.com"
 CONFIG_AWS_IOT_CLIENT_ID_STATIC="misogate"
-
 CONFIG_AWS_IOT_TOPIC_UPDATE_DELTA_SUBSCRIBE=y
 CONFIG_AWS_IOT_TOPIC_GET_ACCEPTED_SUBSCRIBE=y
 CONFIG_AWS_IOT_TOPIC_GET_REJECTED_SUBSCRIBE=y
 
-# MQTT helper library
+# ========================================
+# MQTT
+# ========================================
+CONFIG_MQTT_KEEPALIVE=1200
+CONFIG_MQTT_CLEAN_SESSION=y
+
+# MQTT Helper
 CONFIG_MQTT_HELPER=y
 CONFIG_MQTT_HELPER_SEC_TAG=201
 CONFIG_MQTT_HELPER_LAST_WILL=y
 CONFIG_MQTT_HELPER_STACK_SIZE=4096
 
-# MQTT
-CONFIG_MQTT_KEEPALIVE=1200
-CONFIG_MQTT_CLEAN_SESSION=y
 
-# Memfault Configuration
-CONFIG_MEMFAULT=y
-CONFIG_MEMFAULT_NCS_PROJECT_KEY="yiOkY8kF0mxCyfeDjLASlf0SBeYxDpM0"
-CONFIG_MEMFAULT_LOGGING_ENABLE=y
-CONFIG_MEMFAULT_LOG_LEVEL_INF=y
-CONFIG_MEMFAULT_HTTP_ENABLE=y
-CONFIG_MEMFAULT_HTTP_PERIODIC_UPLOAD=y
-CONFIG_MEMFAULT_HTTP_PERIODIC_UPLOAD_INTERVAL_SECS=60
-CONFIG_MEMFAULT_USER_CONFIG_ENABLE=y
-CONFIG_MEMFAULT_SHELL=y
-# Memfault Coredump Configuration
-# If using internal flash, these might be needed. If not, consider enabling RAM backed coredump again 
-# but reducing the size or region captured if memory is tight.
-# For this fix, we will try enabling RAM backed coredump again but with a very small size limit 
-# or try to fix the flash backing store if that is what is desired.
-# However, undefined references suggest the flash storage implementation is missing or not linked.
-# Let's revert to RAM backed coredump but keep the memory optimizations. 
-CONFIG_MEMFAULT_RAM_BACKED_COREDUMP=y
-CONFIG_MEMFAULT_RAM_BACKED_COREDUMP_SIZE=1024
 
-# Memfault Versioning
-CONFIG_MEMFAULT_NCS_FW_VERSION_STATIC=y
-CONFIG_MEMFAULT_NCS_FW_VERSION="0.0.1"
-CONFIG_MEMFAULT_NCS_FW_TYPE="main"
-CONFIG_MEMFAULT_NCS_DEVICE_ID_STATIC=y
-CONFIG_MEMFAULT_NCS_DEVICE_ID="misogate-test-device"
 
-# Memfault FOTA
-CONFIG_MEMFAULT_FOTA=y
-CONFIG_FOTA_DOWNLOAD=y
-CONFIG_DOWNLOAD_CLIENT=y
-CONFIG_DFU_TARGET=y
-CONFIG_IMG_MANAGER=y
-CONFIG_FLASH_MAP=y
-CONFIG_STREAM_FLASH=y
+
+
+# # ========================================
+# # Memfault Configuration
+# # ========================================
+# CONFIG_MEMFAULT=y
+# CONFIG_MEMFAULT_NCS_PROJECT_KEY="yiOkY8kF0mxCyfeDjLASlf0SBeYxDpM0"
+
+# # Device Info
+# CONFIG_MEMFAULT_NCS_DEVICE_ID_STATIC=y
+# CONFIG_MEMFAULT_NCS_DEVICE_ID="gate001"
+# CONFIG_MEMFAULT_NCS_FW_VERSION_STATIC=y
+# CONFIG_MEMFAULT_NCS_FW_VERSION="0.0.1"
+# CONFIG_MEMFAULT_NCS_FW_TYPE="main"
+
+# # Connectivity & Logging
+# CONFIG_MEMFAULT_HTTP_ENABLE=y
+# CONFIG_MEMFAULT_HTTP_PERIODIC_UPLOAD=y
+# CONFIG_MEMFAULT_SHELL=y
+# CONFIG_MEMFAULT_LOGGING_ENABLE=y
+# CONFIG_MEMFAULT_LOG_LEVEL_DBG=y
+
+# # Coredump
+# CONFIG_MEMFAULT_NCS_INTERNAL_FLASH_BACKED_COREDUMP=y
+# CONFIG_MEMFAULT_COREDUMP_COLLECT_BSS_REGIONS=y
+
+# # ========================================
+# # FOTA & DFU (Memfault + General)
+# # ========================================
+# CONFIG_MEMFAULT_FOTA=y
+# CONFIG_MEMFAULT_FOTA_CLI_CMD=y
+# CONFIG_FOTA_DOWNLOAD=y
+# CONFIG_FOTA_DOWNLOAD_PROGRESS_EVT=y
+
+# # Download Client
+# CONFIG_DOWNLOAD_CLIENT=y
+# CONFIG_DOWNLOAD_CLIENT_MAX_FILENAME_SIZE=512
+# CONFIG_DOWNLOAD_CLIENT_STACK_SIZE=4096
+
+# # DFU & Image Manager
+# CONFIG_DFU_TARGET=y
+# CONFIG_IMG_MANAGER=y
