--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,5 @@
-
 # =============================================================================
-# Triggers: Push to main and sophia/ci branches, Pull requests to main
+# Triggers: Push to main, Pull requests to main
 # Actions:
 #   1. Builds unit tests and runs on native_sim
 #   2. Builds misogate for nrf7002dk
@@ -15,17 +14,12 @@ on:
     branches: [main, master, sophia/ci]
   pull_request:
     branches: [main, master]
-  workflow_dispatch:  # Allow manual trigger
-
-env:
-  ZEPHYR_IMAGE: ghcr.io/zephyrproject-rtos/zephyr-build:main
+  workflow_dispatch:
 
 jobs:
   unit-tests:
     name: Unit Tests (native_sim)
-    runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/zephyrproject-rtos/zephyr-build:main
+    runs-on: ubuntu-22.04
     
     steps:
       - name: Checkout repository
@@ -33,12 +27,55 @@ jobs:
         with:
           fetch-depth: 0
 
+      # Free up disk space
+      - name: Free disk space
+        run: |
+          echo "Disk space before cleanup:"
+          df -h
+          
+          # Remove unnecessary tools to free space
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /opt/ghc
+          sudo rm -rf /opt/hostedtoolcache/CodeQL
+          sudo docker image prune --all --force
+          
+          echo "Disk space after cleanup:"
+          df -h
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y --no-install-recommends \
+            git cmake ninja-build gperf \
+            ccache dfu-util device-tree-compiler wget \
+            python3-dev python3-pip python3-setuptools python3-tk python3-wheel \
+            xz-utils file make gcc gcc-multilib g++-multilib libsdl2-dev
+
+      - name: Install West and Python dependencies
+        run: |
+          pip3 install west
+
       - name: Initialize West workspace
         run: |
           west init -l .
           west update --narrow --fetch-opt=--depth=1
 
+      - name: Install Zephyr SDK (minimal - native tools only)
+        run: |
+          cd ~
+          wget -q https://github.com/zephyrproject-rtos/sdk-ng/releases/download/v0.16.8/zephyr-sdk-0.16.8_linux-x86_64_minimal.tar.xz
+          tar xf zephyr-sdk-0.16.8_linux-x86_64_minimal.tar.xz
+          cd zephyr-sdk-0.16.8
+          ./setup.sh -t x86_64-zephyr-elf -h -c
+
+      - name: Install Zephyr Python dependencies  
+        run: |
+          pip3 install -r zephyr/scripts/requirements.txt
+
       - name: Build unit tests
+        env:
+          ZEPHYR_SDK_INSTALL_DIR: ~/zephyr-sdk-0.16.8
         run: |
           west build -p always \
             -b native_sim/native/64 \
@@ -47,12 +84,9 @@ jobs:
             -- -DCONFIG_ZTEST=y
 
       - name: Run unit tests
-        id: run_tests
         run: |
-          # Run tests and capture output
-          west build -t run tests/unit_test 2>&1 | tee test_output.log
+          west build -t run 2>&1 | tee test_output.log
           
-          # Check for test failures in output
           if grep -q "FAIL" test_output.log; then
             echo "::error::Unit tests failed"
             exit 1
@@ -70,11 +104,10 @@ jobs:
             build/zephyr/zephyr.log
           retention-days: 30
 
+  # Build misogate for nRF7002DK
   build-misogate:
     name: Build misogate (nRF7002DK)
-    runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/zephyrproject-rtos/zephyr-build:main
+    runs-on: ubuntu-22.04
     
     steps:
       - name: Checkout repository
@@ -82,12 +115,46 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Free disk space
+        run: |
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /opt/ghc
+          sudo rm -rf /opt/hostedtoolcache/CodeQL
+          sudo docker image prune --all --force
+          df -h
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y --no-install-recommends \
+            git cmake ninja-build gperf \
+            ccache dfu-util device-tree-compiler wget \
+            python3-dev python3-pip python3-setuptools python3-tk python3-wheel \
+            xz-utils file make gcc gcc-multilib g++-multilib libsdl2-dev
+
+      - name: Install West
+        run: pip3 install west
+
       - name: Initialize West workspace
         run: |
           west init -l .
           west update --narrow --fetch-opt=--depth=1
 
+      - name: Install Zephyr SDK (ARM toolchain)
+        run: |
+          cd ~
+          wget -q https://github.com/zephyrproject-rtos/sdk-ng/releases/download/v0.16.8/zephyr-sdk-0.16.8_linux-x86_64_minimal.tar.xz
+          tar xf zephyr-sdk-0.16.8_linux-x86_64_minimal.tar.xz
+          cd zephyr-sdk-0.16.8
+          ./setup.sh -t arm-zephyr-eabi -h -c
+
+      - name: Install Zephyr Python dependencies
+        run: pip3 install -r zephyr/scripts/requirements.txt
+
       - name: Build misogate
+        env:
+          ZEPHYR_SDK_INSTALL_DIR: ~/zephyr-sdk-0.16.8
         run: |
           west build -p always \
             -b nrf7002dk/nrf5340/cpuapp \
@@ -103,14 +170,12 @@ jobs:
             build/zephyr/zephyr.bin
             build/zephyr/zephyr.elf
             build/zephyr/.config
-            build/zephyr/zephyr.log
           retention-days: 30
 
+  # Build misonode for nRF7002DK
   build-misonode:
     name: Build misonode (nRF7002DK)
-    runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/zephyrproject-rtos/zephyr-build:main
+    runs-on: ubuntu-22.04
     
     steps:
       - name: Checkout repository
@@ -118,12 +183,46 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Free disk space
+        run: |
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /opt/ghc
+          sudo rm -rf /opt/hostedtoolcache/CodeQL
+          sudo docker image prune --all --force
+          df -h
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y --no-install-recommends \
+            git cmake ninja-build gperf \
+            ccache dfu-util device-tree-compiler wget \
+            python3-dev python3-pip python3-setuptools python3-tk python3-wheel \
+            xz-utils file make gcc gcc-multilib g++-multilib libsdl2-dev
+
+      - name: Install West
+        run: pip3 install west
+
       - name: Initialize West workspace
         run: |
           west init -l .
           west update --narrow --fetch-opt=--depth=1
 
+      - name: Install Zephyr SDK (ARM toolchain)
+        run: |
+          cd ~
+          wget -q https://github.com/zephyrproject-rtos/sdk-ng/releases/download/v0.16.8/zephyr-sdk-0.16.8_linux-x86_64_minimal.tar.xz
+          tar xf zephyr-sdk-0.16.8_linux-x86_64_minimal.tar.xz
+          cd zephyr-sdk-0.16.8
+          ./setup.sh -t arm-zephyr-eabi -h -c
+
+      - name: Install Zephyr Python dependencies
+        run: pip3 install -r zephyr/scripts/requirements.txt
+
       - name: Build misonode
+        env:
+          ZEPHYR_SDK_INSTALL_DIR: ~/zephyr-sdk-0.16.8
         run: |
           west build -p always \
             -b nrf7002dk/nrf5340/cpuapp \
@@ -139,9 +238,9 @@ jobs:
             build/zephyr/zephyr.bin
             build/zephyr/zephyr.elf
             build/zephyr/.config
-            build/zephyr/zephyr.log
           retention-days: 30
 
+  # Static Analysis (lightweight, no SDK needed)
   static-analysis:
     name: Static Analysis
     runs-on: ubuntu-latest
@@ -158,13 +257,18 @@ jobs:
       - name: Run clang-format check
         run: |
           echo "Checking code formatting..."
-          find misogate misonode tests -name '*.c' -o -name '*.h' | head -50 | while read file; do
+          ERRORS=0
+          for file in $(find misogate misonode tests -name '*.c' -o -name '*.h' 2>/dev/null | head -50); do
             if [ -f "$file" ]; then
-              clang-format --style=file --dry-run --Werror "$file" 2>&1 || {
+              if ! clang-format --style=file --dry-run --Werror "$file" 2>/dev/null; then
                 echo "::warning file=$file::File needs formatting"
-              }
+                ERRORS=1
+              fi
             fi
           done
+          if [ "$ERRORS" -eq 1 ]; then
+            echo "::warning::Some files need formatting"
+          fi
           echo "✓ Format check complete"
 
       - name: Run cppcheck
@@ -177,12 +281,8 @@ jobs:
                    --suppress=unmatchedSuppression \
                    --inline-suppr \
                    --quiet \
-                   misogate/src misonode/src 2>&1 | tee cppcheck_report.txt
+                   misogate/src misonode/src 2>&1 | tee cppcheck_report.txt || true
           
-          if [ -s cppcheck_report.txt ]; then
-            echo "::warning::cppcheck found potential issues"
-            cat cppcheck_report.txt
-          fi
           echo "✓ Static analysis complete"
 
       - name: Upload analysis reports
@@ -190,10 +290,10 @@ jobs:
         if: always()
         with:
           name: static-analysis-reports
-          path: |
-            cppcheck_report.txt
+          path: cppcheck_report.txt
           retention-days: 30
 
+  # Summary job
   ci-summary:
     name: CI Summary
     runs-on: ubuntu-latest
@@ -212,9 +312,9 @@ jobs:
           echo "Static Analysis: ${{ needs.static-analysis.result }}"
           echo "========================================"
           
-          if [ "${{ needs.unit-tests.result }}" != "success" ] || \
-             [ "${{ needs.build-misogate.result }}" != "success" ] || \
-             [ "${{ needs.build-misonode.result }}" != "success" ]; then
+          if [ "${{ needs.unit-tests.result }}" == "failure" ] || \
+             [ "${{ needs.build-misogate.result }}" == "failure" ] || \
+             [ "${{ needs.build-misonode.result }}" == "failure" ]; then
             echo "::error::One or more CI jobs failed"
             exit 1
           fi
