--- a/tests/mmc5983ma_test/prj.conf
+++ b/tests/mmc5983ma_test/prj.conf
@@ -1,8 +1,5 @@
-# SPDX-License-Identifier: Apache-2.0
-
 # Ztest framework
 CONFIG_ZTEST=y
-CONFIG_ZTEST_NEW_API=y
 
 # Logging
 CONFIG_LOG=y
@@ -11,9 +8,8 @@ CONFIG_LOG_DEFAULT_LEVEL=3
 # Memory
 CONFIG_HEAP_MEM_POOL_SIZE=4096
 
-# Math support (for sqrtf, fabsf)
-CONFIG_NEWLIB_LIBC=y
-CONFIG_FPU=y
-
 # Enable asserts
 CONFIG_ASSERT=y
+
+# Math library
+CONFIG_COMMON_LIBC_MALLOC_ARENA_SIZE=4096
