--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -275,7 +275,7 @@ jobs:
           retention-days: 30
 
   # ===========================================================================
-  # Job 5: Static Analysis
+  # Job 4: Static Analysis
   # ===========================================================================
   static-analysis:
     name: Static Analysis
@@ -293,7 +293,7 @@ jobs:
       - name: Run clang-format check
         run: |
           echo "Checking code formatting..."
-          find misogate misonode magsens tests -name '*.c' -o -name '*.h' 2>/dev/null | head -50 | while read file; do
+          find misonode magsens tests -name '*.c' -o -name '*.h' 2>/dev/null | head -50 | while read file; do
             if [ -f "$file" ]; then
               clang-format --style=file --dry-run --Werror "$file" 2>/dev/null || \
                 echo "::warning file=$file::File needs formatting"
@@ -308,7 +308,7 @@ jobs:
                    --suppress=missingIncludeSystem \
                    --suppress=unusedFunction \
                    --quiet \
-                   misogate/src misonode/src magsens/src 2>&1 | tee cppcheck_report.txt || true
+                   misonode/src magsens/src 2>&1 | tee cppcheck_report.txt || true
           echo "✓ Static analysis complete"
 
       - name: Upload analysis reports
@@ -325,7 +325,7 @@ jobs:
   ci-summary:
     name: CI Summary
     runs-on: ubuntu-latest
-    needs: [unit-tests-mmc5983ma, build-magsens, build-misogate, build-misonode, static-analysis]
+    needs: [unit-tests-mmc5983ma, build-magsens, build-misonode, static-analysis]
     if: always()
     
     steps:
@@ -336,7 +336,6 @@ jobs:
           echo "========================================"
           echo "MMC5983MA Tests: ${{ needs.unit-tests-mmc5983ma.result }}"
           echo "Build magsens:   ${{ needs.build-magsens.result }}"
-          echo "Build misogate:  ${{ needs.build-misogate.result }}"
           echo "Build misonode:  ${{ needs.build-misonode.result }}"
           echo "Static Analysis: ${{ needs.static-analysis.result }}"
           echo "========================================"
