--- a/misogate/prj.conf
+++ b/misogate/prj.conf
@@ -1,138 +1,57 @@
-# ========================================
-# Application Specific
-# ========================================
-CONFIG_MISOGATE_APP_VERSION="0.0.1"
+# Misogate
+CONFIG_MISOGATE_APP_VERSION="v0.0.1"
 
-# ========================================
-# General System & Libraries
-# ========================================
+# General
 CONFIG_LOG=y
-CONFIG_ASSERT=y
-CONFIG_REBOOT=y
-CONFIG_FPU=y
-CONFIG_NEWLIB_LIBC=y
+CONFIG_LOG_BUFFER_SIZE=2048
 CONFIG_HW_ID_LIBRARY=y
+CONFIG_ASSERT=y
 CONFIG_JSON_LIBRARY=y
-CONFIG_DK_LIBRARY=y
+CONFIG_REBOOT=y
 
-# ========================================
-# Heap and Stacks
-# ========================================
-CONFIG_HEAP_MEM_POOL_SIZE=16384
-CONFIG_MAIN_STACK_SIZE=6144
+# Heap and stacks
+CONFIG_HEAP_MEM_POOL_SIZE=32768
+CONFIG_MAIN_STACK_SIZE=8192
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
-CONFIG_NET_CONNECTION_MANAGER_MONITOR_STACK_SIZE=2048
-CONFIG_NET_MGMT_EVENT_STACK_SIZE=2048
 
-# ========================================
-# Flash & Storage
-# ========================================
-CONFIG_FLASH=y
-CONFIG_FLASH_MAP=y
-CONFIG_STREAM_FLASH=y
-CONFIG_STREAM_FLASH_ERASE=y
-
-# ========================================
 # WiFi
-# ========================================
 CONFIG_WIFI_CREDENTIALS_STATIC=y
 CONFIG_WIFI_CREDENTIALS_STATIC_SSID="AirPennNet-Device"
 CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="penn1740wifi"
 
-# ========================================
-# Networking & Sockets
-# ========================================
+# Network
 CONFIG_NETWORKING=y
 CONFIG_NET_NATIVE=y
 CONFIG_NET_IPV4=y
 CONFIG_NET_DHCPV4=y
 CONFIG_DNS_RESOLVER=y
-CONFIG_NET_CONNECTION_MANAGER=y
-
-# Sockets & TLS
 CONFIG_NET_SOCKETS=y
 CONFIG_NET_SOCKETS_SOCKOPT_TLS=y
 CONFIG_TLS_CREDENTIALS=y
-CONFIG_MBEDTLS_ENABLE_HEAP=y
-CONFIG_MBEDTLS_SSL_SERVER_NAME_INDICATION=y
-CONFIG_MBEDTLS=y
-CONFIG_MBEDTLS_HEAP_SIZE=120000
+CONFIG_NET_CONNECTION_MANAGER=y
+CONFIG_ZVFS_OPEN_MAX=24 
 
-# Network Resources & Limits
-CONFIG_ZVFS_OPEN_MAX=24
-CONFIG_POSIX_MAX_FDS=9
+CONFIG_POSIX_MAX_FDS=15
 CONFIG_NET_SOCKETS_TLS_MAX_CONTEXTS=5
-CONFIG_NET_TC_TX_COUNT=1
-CONFIG_NET_TX_STACK_SIZE=2048
-CONFIG_NET_RX_STACK_SIZE=2048
 
-# ========================================
+# AWS IoT library
+CONFIG_AWS_IOT=y
+CONFIG_AWS_IOT_BROKER_HOST_NAME="a1nqctvl2kwinw-ats.iot.us-east-2.amazonaws.com"
+CONFIG_AWS_IOT_CLIENT_ID_STATIC="misogate"
+
+CONFIG_AWS_IOT_TOPIC_UPDATE_DELTA_SUBSCRIBE=y
+CONFIG_AWS_IOT_TOPIC_GET_ACCEPTED_SUBSCRIBE=y
+CONFIG_AWS_IOT_TOPIC_GET_REJECTED_SUBSCRIBE=y
+
+CONFIG_AWS_FOTA=y
+CONFIG_AWS_FOTA_DOWNLOAD_SECURITY_TAG=201
+
+# MQTT helper library
+CONFIG_MQTT_HELPER=y
+CONFIG_MQTT_HELPER_SEC_TAG=201
+CONFIG_MQTT_HELPER_LAST_WILL=y
+CONFIG_MQTT_HELPER_STACK_SIZE=4096
+
 # MQTT
-# ========================================
-CONFIG_MQTT_LIB=y
-CONFIG_MQTT_LIB_TLS=y
+CONFIG_MQTT_KEEPALIVE=1200
 CONFIG_MQTT_CLEAN_SESSION=y
-CONFIG_MQTT_KEEPALIVE=60
-
-CONFIG_MISOGATE_MQTT_BROKER_HOSTNAME="c1412829227647ae9f57545fe534a511.s1.eu.hivemq.cloud"
-CONFIG_MISOGATE_MQTT_BROKER_PORT=8883
-CONFIG_MISOGATE_MQTT_CLIENT_ID="misogate-001"
-CONFIG_MISOGATE_MQTT_USERNAME="misogate"
-CONFIG_MISOGATE_MQTT_PASSWORD="RAanQxVbTHNeAg6"
-
-
-# ========================================
-# Memfault Configuration
-# ========================================
-CONFIG_MEMFAULT=y
-CONFIG_MEMFAULT_NCS_PROJECT_KEY="yiOkY8kF0mxCyfeDjLASlf0SBeYxDpM0"
-
-CONFIG_MEMFAULT_LOGGING_ENABLE=y
-CONFIG_MEMFAULT_LOG_LEVEL_DBG=y
-
-CONFIG_MEMFAULT_HTTP_ENABLE=n
-CONFIG_MEMFAULT_HTTP_PERIODIC_UPLOAD=n
-CONFIG_MEMFAULT_ROOT_CERT_STORAGE_TLS_CREDENTIAL_STORAGE=n
-CONFIG_MEMFAULT_NCS_PROVISION_CERTIFICATES=n
-
-
-# ========================================
-# Debug
-# ========================================
-CONFIG_THREAD_STACK_INFO=y
-CONFIG_INIT_STACKS=y
-CONFIG_THREAD_ANALYZER=y
-
-
-# # Device Info
-# CONFIG_MEMFAULT_NCS_DEVICE_ID_STATIC=y
-# CONFIG_MEMFAULT_NCS_DEVICE_ID="gate001"
-# CONFIG_MEMFAULT_NCS_FW_VERSION_STATIC=y
-# CONFIG_MEMFAULT_NCS_FW_VERSION="0.0.1"
-# CONFIG_MEMFAULT_NCS_FW_TYPE="main"
-
-# # Connectivity & Logging
-# # CONFIG_MEMFAULT_SHELL=y
-
-# # Coredump
-# CONFIG_MEMFAULT_NCS_INTERNAL_FLASH_BACKED_COREDUMP=y
-# CONFIG_MEMFAULT_COREDUMP_COLLECT_BSS_REGIONS=y
-
-# # ========================================
-# # FOTA & DFU (Memfault + General)
-# # ========================================
-# CONFIG_MEMFAULT_FOTA=y
-# CONFIG_MEMFAULT_FOTA_CLI_CMD=y
-# CONFIG_FOTA_DOWNLOAD=y
-# CONFIG_FOTA_DOWNLOAD_PROGRESS_EVT=y
-
-# # Download Client
-# CONFIG_DOWNLOAD_CLIENT=y
-# CONFIG_DOWNLOAD_CLIENT_MAX_FILENAME_SIZE=512
-# CONFIG_DOWNLOAD_CLIENT_STACK_SIZE=4096
-
-# # # DFU & Image Manager
-# CONFIG_DFU_TARGET=y
-# CONFIG_IMG_MANAGER=y
-
-
