--- a/misogate-prod/prj.conf
+++ b/misogate-prod/prj.conf
@@ -11,31 +11,26 @@ CONFIG_ASSERT=y
 CONFIG_REBOOT=y
 CONFIG_FPU=y
 CONFIG_NEWLIB_LIBC=y
-CONFIG_GPIO=y
-
-# ========================================
-# Console / Logging
-# ========================================
-CONFIG_SERIAL=y
-CONFIG_CONSOLE=y
-CONFIG_UART_CONSOLE=y
-CONFIG_PRINTK=y
-CONFIG_LOG_MODE_IMMEDIATE=y
-
-# ========================================
-# LoRa / Radio Support
-# ========================================
-CONFIG_LORA=y
-CONFIG_LORA_LOG_LEVEL_INF=y
+CONFIG_HW_ID_LIBRARY=y
+CONFIG_JSON_LIBRARY=y
+CONFIG_DK_LIBRARY=y
 
 # ========================================
 # Heap and Stacks
 # ========================================
-CONFIG_HEAP_MEM_POOL_SIZE=12288
+CONFIG_HEAP_MEM_POOL_SIZE=16384
 CONFIG_MAIN_STACK_SIZE=4096
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
-CONFIG_NET_CONNECTION_MANAGER_MONITOR_STACK_SIZE=1024
-CONFIG_NET_MGMT_EVENT_STACK_SIZE=1024
+CONFIG_NET_CONNECTION_MANAGER_MONITOR_STACK_SIZE=2048
+CONFIG_NET_MGMT_EVENT_STACK_SIZE=2048
+
+# ========================================
+# Flash & Storage
+# ========================================
+CONFIG_FLASH=y
+CONFIG_FLASH_MAP=y
+CONFIG_STREAM_FLASH=y
+CONFIG_STREAM_FLASH_ERASE=y
 
 # ========================================
 # WiFi
@@ -61,15 +56,15 @@ CONFIG_TLS_CREDENTIALS=y
 CONFIG_MBEDTLS_ENABLE_HEAP=y
 CONFIG_MBEDTLS_SSL_SERVER_NAME_INDICATION=y
 CONFIG_MBEDTLS=y
-CONFIG_MBEDTLS_HEAP_SIZE=120000
+CONFIG_MBEDTLS_HEAP_SIZE=81920
 
 # Network Resources & Limits
-CONFIG_ZVFS_OPEN_MAX=16
-CONFIG_POSIX_MAX_FDS=8
-CONFIG_NET_SOCKETS_TLS_MAX_CONTEXTS=3
+CONFIG_ZVFS_OPEN_MAX=24
+CONFIG_POSIX_MAX_FDS=9
+CONFIG_NET_SOCKETS_TLS_MAX_CONTEXTS=5
 CONFIG_NET_TC_TX_COUNT=1
-CONFIG_NET_TX_STACK_SIZE=1500
-CONFIG_NET_RX_STACK_SIZE=1500
+CONFIG_NET_TX_STACK_SIZE=2048
+CONFIG_NET_RX_STACK_SIZE=2048
 
 # ========================================
 # MQTT
@@ -81,13 +76,70 @@ CONFIG_MQTT_KEEPALIVE=60
 
 CONFIG_MISOGATE_MQTT_BROKER_HOSTNAME="c1412829227647ae9f57545fe534a511.s1.eu.hivemq.cloud"
 CONFIG_MISOGATE_MQTT_BROKER_PORT=8883
-CONFIG_MISOGATE_MQTT_CLIENT_ID="misogate-gateway"
+CONFIG_MISOGATE_MQTT_CLIENT_ID="misogate-001"
 CONFIG_MISOGATE_MQTT_USERNAME="misogate"
 CONFIG_MISOGATE_MQTT_PASSWORD="RAanQxVbTHNeAg6"
 
 # ========================================
+# LoRa / Radio Support
+# ========================================
+CONFIG_LORA=y
+CONFIG_LORA_LOG_LEVEL_INF=y
+CONFIG_LOG_MODE_IMMEDIATE=y
+CONFIG_SPI=y
+CONFIG_GPIO=y
+
+# ========================================
+# Memfault Configuration
+# ========================================
+# CONFIG_MEMFAULT=y
+# CONFIG_MEMFAULT_NCS_PROJECT_KEY="yiOkY8kF0mxCyfeDjLASlf0SBeYxDpM0"
+
+# CONFIG_MEMFAULT_LOGGING_ENABLE=y
+# CONFIG_MEMFAULT_LOG_LEVEL_DBG=y
+
+# CONFIG_MEMFAULT_HTTP_ENABLE=n
+# CONFIG_MEMFAULT_HTTP_PERIODIC_UPLOAD=n
+# CONFIG_MEMFAULT_ROOT_CERT_STORAGE_TLS_CREDENTIAL_STORAGE=n
+# CONFIG_MEMFAULT_NCS_PROVISION_CERTIFICATES=n
+
+
+# ========================================
 # Debug
 # ========================================
-CONFIG_THREAD_STACK_INFO=y
-CONFIG_INIT_STACKS=y
-CONFIG_THREAD_ANALYZER=y
+# CONFIG_THREAD_STACK_INFO=y
+# CONFIG_INIT_STACKS=y
+# CONFIG_THREAD_ANALYZER=y
+
+
+# # Device Info
+# CONFIG_MEMFAULT_NCS_DEVICE_ID_STATIC=y
+# CONFIG_MEMFAULT_NCS_DEVICE_ID="gate001"
+# CONFIG_MEMFAULT_NCS_FW_VERSION_STATIC=y
+# CONFIG_MEMFAULT_NCS_FW_VERSION="0.0.1"
+# CONFIG_MEMFAULT_NCS_FW_TYPE="main"
+
+# # Connectivity & Logging
+# # CONFIG_MEMFAULT_SHELL=y
+
+# # Coredump
+# CONFIG_MEMFAULT_NCS_INTERNAL_FLASH_BACKED_COREDUMP=y
+# CONFIG_MEMFAULT_COREDUMP_COLLECT_BSS_REGIONS=y
+
+# # ========================================
+# # FOTA & DFU (Memfault + General)
+# # ========================================
+# CONFIG_MEMFAULT_FOTA=y
+# CONFIG_MEMFAULT_FOTA_CLI_CMD=y
+# CONFIG_FOTA_DOWNLOAD=y
+# CONFIG_FOTA_DOWNLOAD_PROGRESS_EVT=y
+
+# # Download Client
+# CONFIG_DOWNLOAD_CLIENT=y
+# CONFIG_DOWNLOAD_CLIENT_MAX_FILENAME_SIZE=512
+# CONFIG_DOWNLOAD_CLIENT_STACK_SIZE=4096
+
+# # # DFU & Image Manager
+# CONFIG_DFU_TARGET=y
+# CONFIG_IMG_MANAGER=y
+
