--- a/misogate-prod/prj.conf
+++ b/misogate-prod/prj.conf
@@ -105,6 +105,14 @@ CONFIG_GPIO=y
 
 
 # ========================================
+# Console / UART
+# ========================================
+CONFIG_CONSOLE=y
+CONFIG_UART_CONSOLE=y
+CONFIG_CONSOLE_SUBSYS=y
+CONFIG_CONSOLE_GETLINE=y
+
+# ========================================
 # Debug
 # ========================================
 # CONFIG_THREAD_STACK_INFO=y
