--- a/misogate/prj.conf
+++ b/misogate/prj.conf
@@ -5,9 +5,12 @@ CONFIG_MISOGATE_APP_VERSION="v0.0.1"
 CONFIG_LOG=y
 CONFIG_LOG_BUFFER_SIZE=2048
 CONFIG_HW_ID_LIBRARY=y
-CONFIG_ASSERT=y
+CONFIG_ASSERT=n
 CONFIG_JSON_LIBRARY=y
 CONFIG_REBOOT=y
+
+CONFIG_DEBUG=n
+CONFIG_DEBUG_OPTIMIZATIONS=n
 
 # Heap and stacks
 CONFIG_HEAP_MEM_POOL_SIZE=32768
