--- a/misogate/overlay-memfault.conf
+++ b/misogate/overlay-memfault.conf
@@ -1,65 +1,53 @@
 
-# -----------------------------------------------------------------------------
-# Memfault Core Configuration
-# -----------------------------------------------------------------------------
+
 CONFIG_MEMFAULT=y
 
 # Project key
 CONFIG_MEMFAULT_NCS_PROJECT_KEY="x7qXM4RQDbbtYQMmqbFTwXNywgjUF3qx"
 
-# Firmware version tracking
-CONFIG_MEMFAULT_NCS_FW_VERSION_STATIC=y
-CONFIG_MEMFAULT_NCS_FW_VERSION="0.0.1"
-CONFIG_MEMFAULT_NCS_FW_TYPE="misogate"
-
 # Device identification
 CONFIG_MEMFAULT_NCS_DEVICE_ID_RUNTIME=y
+CONFIG_MEMFAULT_NCS_HW_VERSION="nrf7002dk"
 
-# core dump
-CONFIG_MEMFAULT_COREDUMP_COLLECT_BSS_REGIONS=y
-CONFIG_MEMFAULT_COREDUMP_COLLECT_DATA_REGIONS=y
+CONFIG_MEMFAULT_NCS_FW_VERSION_AUTO=y
+CONFIG_MEMFAULT_NCS_FW_TYPE="misogate"
 
-# store coredumps in flash
-CONFIG_MEMFAULT_BACKEND_COREDUMP_FLASH=y
-CONFIG_MEMFAULT_COREDUMP_STORAGE_START_ADDR=0xF8000
-CONFIG_MEMFAULT_COREDUMP_STORAGE_END_ADDR=0x100000
+
+CONFIG_MEMFAULT_LOGGING_ENABLE=y
+CONFIG_MEMFAULT_LOG_LEVEL_DBG=y
+
+# coredump
+CONFIG_MEMFAULT_NCS_INTERNAL_FLASH_BACKED_COREDUMP=y
 
 # metrics
 CONFIG_MEMFAULT_METRICS=y
-CONFIG_MEMFAULT_METRICS_DEFAULT_SET_ENABLE=y
-
-CONFIG_MEMFAULT_METRICS_HEARTBEAT_INTERVAL_SECS=3600
-
 CONFIG_MEMFAULT_NCS_STACK_METRICS=y
 
-# http upload
+# http
 CONFIG_MEMFAULT_HTTP_ENABLE=y
 CONFIG_MEMFAULT_HTTP_PERIODIC_UPLOAD=y
 CONFIG_MEMFAULT_HTTP_PERIODIC_UPLOAD_INTERVAL_SECS=3600
 
-# TLS/Certificate configuration
 CONFIG_MEMFAULT_ROOT_CERT_STORAGE_TLS_CREDENTIAL_STORAGE=y
-CONFIG_MEMFAULT_NCS_PROVISION_CERTIFICATES=y
-
-# ota configs
-CONFIG_MEMFAULT_FOTA=y
-CONFIG_MEMFAULT_FOTA_DOWNLOAD_CALLBACK_CUSTOM=n
-
-CONFIG_MEMFAULT_LOGGING_ENABLE=y
-CONFIG_MEMFAULT_LOG_LEVEL_INF=y
 
 CONFIG_MEMFAULT_SHELL=y
 
-# network configs
-CONFIG_DNS_RESOLVER=y
-CONFIG_POSIX_MAX_FDS=15
+CONFIG_MEMFAULT_REBOOT_REASON_GET_CUSTOM=n
 
-# mbedTLS heap
-CONFIG_MBEDTLS_HEAP_SIZE=120000
+# dependencies
+CONFIG_POSIX_API=y
+CONFIG_REBOOT=y
+CONFIG_HWINFO=y
 
-CONFIG_NET_TX_STACK_SIZE=2048
-CONFIG_NET_TX_BUF_COUNT=64
-CONFIG_NET_TC_TX_COUNT=1
+# reduce Memfault footprint
+CONFIG_MEMFAULT_SHELL=n
+CONFIG_MEMFAULT_LOGGING_ENABLE=n
+CONFIG_MEMFAULT_HTTP_PERIODIC_UPLOAD=n
 
-CONFIG_MEMFAULT_USER_CONFIG_ENABLE=y
-CONFIG_MEMFAULT_USER_CONFIG_SILENT_FAIL=n
+# reduce logging
+CONFIG_LOG_MODE_MINIMAL=y
+CONFIG_LOG_DEFAULT_LEVEL=1
+
+# optimize size
+CONFIG_SIZE_OPTIMIZATIONS=y
+CONFIG_SPEED_OPTIMIZATIONS=n
